# dataprep

./: .gitignore  Cargo.toml  README.md  test.txt
dataprep-bench/: Cargo.toml
dataprep-bench/src/: bencher.rs  cli.rs  main.rs
dataprep-lib/src/: plan_copy.rs
dataprep-lib/src/pipeline/: pack_pipeline.rs  unpack_pipeline.rs
dataprep-lib/src/types/: pipeline.rs  plan.rs  spider.rs
dataprep-lib/src/vacuum/: pack.rs  unpack.rs
dataprep-lib/tests/: pipeline.rs
dataprep-pipelines/: Cargo.toml  Dockerfile
dataprep-pipelines/benches/: pipeline.rs  pipeline_macro.rs  pipeline_micro.rs
dataprep-pipelines/src/utils/: fs.rs
dataprep-pipelines/tests/: benchmark.rs  pipeline.rs
dataprep/src/: cli.rs  main.rs
dataprep/test/: 841317fc-53a7-4c8e-9b6e-d067a0d2885c  c2bacc73-d34a-4315-a63b-a9a47bf6f195
env/: env.benchmark  env.pipeline.benchmark
