[package]
name = "dataprep-bench"
description = "Command line interface for preparing data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
dataprep-pipelines.workspace = true
tokio.workspace = true
fs_extra.workspace = true
fake-file.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
anyhow.workspace = true


