[package]
name = "dataprep-pipelines"
description = "where the actual magic happens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
jwalk.workspace = true
blake2.workspace = true
flate2.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
rand.workspace = true
printio.workspace = true
age.workspace = true
# TODO Dev dependencies
strum.workspace = true
dir-assert.workspace = true
fs_extra.workspace = true
criterion.workspace = true
test-notifier.workspace = true
pprof.workspace = true
fake-file.workspace = true

# Macro Bench Suite for the pipeline on a large file structure
[[bench]]
name = "pipeline_macro"
harness = true

# TODO (amiller68): Reimplement this benchmark with In-memory files (reduces IO overhead)
# Micro Bench Suite for pipeline sections
#[[bench]]
#name = "pipeline_micro"
#harness = false

# Dev benchmark for generating random file structures
# Ignored by default
#[[bench]]
#name = "file_structure"
#harness = false
