[package]
name = "dataprep-pipelines"
description = "where the actual magic happens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
jwalk.workspace = true
blake2.workspace = true
flate2.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
rand.workspace = true
printio.workspace = true
age.workspace = true
# TODO Dev dependencies
strum.workspace = true
dir-assert.workspace = true
fs_extra.workspace = true
criterion.workspace = true
test-notifier.workspace = true
pprof.workspace = true
fake-file.workspace = true

[profile.release]
debug = true

[profile.bench]
debug = true

# E2E Bench Suite for the dataprep-pipelines
[[bench]]
name = "pipeline"
harness = false
